# journly-app

./: .prettierignore  Makefile  README.md  typeshare.toml
client/: .env  (+6 more)
server/: .env  Cargo.toml  Dockerfile  Makefile  README.md  config.toml  docker-compose.yaml  email_test.sh  postgrestools.jsonc  schema.sql  test_config.toml
server/migrations/: U0001__users.sql  U0002__dates.sql  U0003__trips.sql  U0004__sections.sql  U0007__itineraries.sql  U0008__itinerary_activities.sql  U0009__budgeting_tracker.sql  U0010__expenses.sql  U0011__file_attachments.sql  U0013__markers.sql  V1__users.rs  example_migration.rs
server/migrations/2025-05-22-074039_users/: up.sql
server/migrations/2025-05-23-021259_trips/: up.sql
server/migrations/2025-05-23-021329_documents/: up.sql
server/migrations/2025-05-23-021349_budget_planners/: down.sql  up.sql
server/migrations/2025-05-23-021350_locations/: up.sql
server/migrations/2025-05-23-021351_expenses/: up.sql
server/migrations/2025-05-23-021355_itinerary_items/: down.sql  up.sql
server/migrations/2025-05-23-021423_personal_budgets/: down.sql  up.sql
server/migrations/2025-05-23-021454_expense_payers/: down.sql  up.sql
server/migrations/2025-05-23-021516_flights/: up.sql
server/migrations/2025-05-23-021526_accommodations/: down.sql  up.sql
server/migrations/2025-05-23-021544_occupants/: down.sql  up.sql
server/migrations/2025-05-23-021550_passengers/: down.sql  up.sql
server/migrations/2025-05-23-021609_maps/: down.sql  up.sql
server/migrations/2025-05-23-021634_user_map/: down.sql  up.sql
server/migrations/2025-05-23-021744_user_trip/: down.sql  up.sql
server/migrations/2025-05-23-021757_journals/: down.sql  up.sql
server/migrations/2025-05-23-021802_user_journal/: down.sql  up.sql
server/migrations/2025-05-23-021811_trip_invites/: down.sql  up.sql
server/migrations/2025-05-29-074808_notes/: up.sql
server/migrations/2025-05-29-075439_tasks/: up.sql
server/migrations/2025-06-01-063734_api_tokens/: up.sql
server/migrations/2025-06-02-030811_user_email_verification/: down.sql  up.sql
server/migrations/2025-06-02-073848_email_subscribers/: down.sql  up.sql
server/migrations/2025-06-05-073901_refresh_tokens/: up.sql
server/migrations/2025-06-07-104351_refresh_token_trees_modification/: down.sql  up.sql
server/migrations/2025-06-08-031925_test_user/: down.sql  up.sql
server/migrations/2025-07-01-211822_user_verification_codes/: down.sql  up.sql
server/migrations/2025-07-19-014912_replicache/: down.sql  up.sql
server/src/: app.rs  auth.rs  broadcast.rs  config.rs  db.rs  email.rs  errors.rs  google_oauth.rs  lib.rs  main.rs  routes.rs  s3_client.rs  schema.rs  util.rs  views.rs
server/src/controllers/: auth.rs  auth_controller.rs  helper.rs  mod.rs  trip.rs  trip_controller.rs  trip_plan.rs  user.rs  user_controller.rs
server/src/database/: db.rs  mod.rs
server/src/handlers/: auth.rs  mod.rs  trip.rs  user.rs
server/src/middleware/: auth.rs
server/src/migrations/: U0001__users.sql  U0002__dates.sql  U0003__trips.sql  U0004__sections.sql  U0005__maps.sql  U0006__itineraries.sql  U0006__widgets.sql  U0007__widgets.sql  U0008__itinerary_activities.sql  U0009__budgeting_tracker.sql  U0010__expenses.sql  U0011__file_attachments.sql  U0012__coordinates.sql  U0013__markers.sql  U0014__journals.sql  V1__initial.sql  original_schema.sql
server/src/models/: budget_planner.rs  documents.rs  expenses.rs  itinerary.rs  location.rs  mod.rs  refresh_tokens.rs  schema.rs  schema_reference.md  trip.rs  trips.rs  user.rs  user_trip.rs  users.rs
server/src/routes/: user.rs
server/src/util/: auth.rs  errors.rs  mod.rs  view_conversion.rs
server/tests/: config_test.rs  test.rs
server/tests/api_test/: auth.rs  health.rs  mod.rs  trip.rs  user.rs  util.rs
(+268 files in other folders)
