[package]
name = "journly-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
chrono = {version="0.4.40", features = ["serde"]}
derive_more = "2.0.1"
rust_decimal = { version = "1.37.1", features = ["serde"]}
serde = "1.0.219"
serde_json = "1.0.140"
time = {version="0.3.41", features=["serde"]}
uuid = {version = "1.16.0", features = ["v4", "serde"]}
typeshare = "1.0.0"
argon2 = {version = "0.5.3", features=["default", "std"]}
actix-multipart = "0.7.2"
futures = "0.3.0"
actix-rt = "2.10.0"
reqwest = {version = "0.12.15", features = ["json"]}
utoipa = {version = "5.3.1", features = ["actix_extras", "uuid", "chrono"]}
utoipa-swagger-ui = {version = "9.0.1", features= ["actix-web"]}
log = "0.4.27"
env_logger = "0.11.8"
base64 = "0.22.1"
diesel = { version = "2.2.10", features = ["uuid", "chrono",  "serde_json", "numeric"] }
diesel_migrations = "2.2.0"
diesel-async = { version = "0.5.2", features = ["postgres", "deadpool", "async-connection-wrapper"] }
bon = "3.6.3"
bigdecimal = {version = "0.4.8", features = ["serde"]}
config = "0.15.11"
lettre = {version = "0.11.16", features = ["smtp-transport", "tokio1", "file-transport", "tokio1-native-tls"]}
anyhow = "1.0.98"
thiserror = "2.0.12"
tokio-test = "0.4.4"
hmac = "0.12.1"
sha2 = "0.10.9"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
